--- a/earn.html
+++ b/earn.html
@@ -617,7 +617,7 @@
     }
 
     .jss14 {
-      fill: rgba(25, 101, 233, 0.5);
+      fill: rgba(25, 101, 233, 0.5)!important;
       margin-right: 6px;
     }
 
@@ -865,6 +865,22 @@
 .jss508{top:0px;right:0px;cursor:pointer;position:absolute;}
 /*! CSS Used fontfaces */
 @font-face{font-family:Work Sans Thin;font-style:normal;font-display:swap;font-weight:400;src:local('Work Sans Thin'),     local('Work Sans Thin'),     url(https://yearn.finance/static/media/WorkSans-VariableFont_wght.b2439691.ttf) format('truetype');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF;}
+#overlay{
+  position: fixed;
+  z-index: 1300;
+   top: 0;
+   right: 0;
+   bottom: 0;
+   left: 0;
+   display: none;
+}
+#close {
+   position: absolute;
+   top: 10px;
+   right: 10px;
+   cursor: pointer;
+   color: #000;
+}
   </style>
 </head>
 
@@ -1007,19 +1023,19 @@
         </div>
         <div class="jss21">
           <h6 class="MuiTypography-root jss12 MuiTypography-h6">Socials</h6>
-          <div class="jss13"><img alt="" src="./static/media/twitter.d096bc16.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/twitter.d096bc16.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Twitter</h4>
           </div>
-          <div class="jss13"><img alt="" src="./static/media/medium.48651d56.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/medium.48651d56.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Medium</h4>
           </div>
-          <div class="jss13"><img alt="" src="./static/media/discord.c4ee516e.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/discord.c4ee516e.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Discord</h4>
           </div>
-          <div class="jss13"><img alt="" src="./static/media/telegram.bb486f03.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/telegram.bb486f03.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Telegram</h4>
           </div>
-          <div class="jss13"><img alt="" src="./static/media/github.7611642e.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/github.7611642e.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Github</h4>
           </div>
         </div>
@@ -1156,42 +1172,44 @@
 
 
   <!--POPUP-->
-  <div role="presentation" class="MuiDialog-root" style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; display:block">
+  <div role="presentation" id="overlay" class="MuiDialog-root" style="">
     <div class="MuiBackdrop-root" aria-hidden="true" style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"></div>
     <div tabindex="0" data-test="sentinelStart"></div>
     <div class="MuiDialog-container MuiDialog-scrollPaper" role="none presentation" tabindex="-1" style="transform: none; transition: transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;">
       <div class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiDialog-paperFullWidth MuiPaper-elevation24 MuiPaper-rounded" role="dialog">
         <div class="MuiDialogContent-root">
           <div class="jss326">
-            <div class="jss334"><svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+            <div class="jss334">
+              <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
                 <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
                 <path fill="none" d="M0 0h24v24H0z"></path>
-              </svg></div>
+              </svg>
+            </div>
             <div class="jss327">
               <div style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: center;">
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">MetaMask</h3><img src="./static/media/icn-metamask.a357c69f.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">MetaMask</h3><img src="https://yearn.finance/static/media/icn-metamask.a357c69f.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">TrustWallet</h3><img src="./static/media/trustWallet.edcc1ab5.png" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">TrustWallet</h3><img src="https://yearn.finance/static/media/trustWallet.edcc1ab5.png" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">WalletConnect</h3><img src="./static/media/walletConnectIcon.8215855c.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">WalletConnect</h3><img src="https://yearn.finance/static/media/walletConnectIcon.8215855c.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Coinbase Wallet</h3><img src="./static/media/coinbaseWalletIcon.62578f59.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Coinbase Wallet</h3><img src="https://yearn.finance/static/media/coinbaseWalletIcon.62578f59.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Ledger</h3><img src="./static/media/icn-ledger.ae009e65.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Ledger</h3><img src="https://yearn.finance/static/media/icn-ledger.ae009e65.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
@@ -1208,7 +1226,7 @@
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Portis</h3><img src="./static/media/portisIcon.b234b2bf.png" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Portis</h3><img src="https://yearn.finance/static/media/portisIcon.b234b2bf.png" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
@@ -1225,7 +1243,7 @@
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Authereum</h3><img src="./static/media/icn-aethereum.54d70e4e.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Authereum</h3><img src="https://yearn.finance/static/media/icn-aethereum.54d70e4e.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="width: 252px; margin: 12px 0px;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
@@ -1241,6 +1259,31 @@
     <div tabindex="0" data-test="sentinelEnd"></div>
   </div>
   <!--POPUP-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript">
+      /*$(document).ready(function(){
+            $("p").click(function(){
+              $(".MuiDialog-root").css({"position": "fixed", "z-index": "1300", "right": "0", "left": "0", "top": "0", "bottom": "0"});
+            })
+      });*/
+      $(document).ready(function() {
+         $('.jss287').click(function() {
+            $('#overlay').fadeIn(300);
+         });
+
+         $('.MuiSvgIcon-root, .MuiBackdrop-root').click(function() {
+            $('#overlay').fadeOut(300);
+         });
+
+         // Close Popup When Click Outside
+     $('#overlay').on('click', function() {
+      var popup_name = $(this).find('[popup-close]').attr('popup-close');
+      $('[popup-name]').fadeOut(300);
+         }).children().click(function() {
+      return false;
+         });
+      });
+  </script>
 </body>
 
 </html>
