remise des images cassées

--- a/earn.html
+++ b/earn.html
@@ -23,6 +23,7 @@
   <meta name="theme-color" content="#000000">
   <meta name="viewport" content="initial-scale=1,minimum-scale=1,width=device-width,shrink-to-fit=yes">
   <link rel="manifest" href="./manifest.json">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <title>yearn</title>
   <link href="./static/css/main.60c6551b.chunk.css" rel="stylesheet">
   <style data-jss="" data-meta="MuiCssBaseline">
@@ -47,7 +48,7 @@
       color: #212529;
       margin: 0;
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.43;
       background-color: #fafafa;
@@ -84,7 +85,7 @@
 
     .MuiTypography-body2 {
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.43;
       -webkit-font-smoothing: antialiased;
@@ -93,7 +94,7 @@
 
     .MuiTypography-body1 {
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.5;
       -webkit-font-smoothing: antialiased;
@@ -102,14 +103,14 @@
 
     .MuiTypography-caption {
       font-size: 0.75rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 400;
       line-height: 1.66;
     }
 
     .MuiTypography-button {
       font-size: 0.875rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
       line-height: 1.75;
       text-transform: uppercase;
@@ -117,7 +118,7 @@
 
     .MuiTypography-h1 {
       font-size: 48px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -126,7 +127,7 @@
 
     .MuiTypography-h2 {
       font-size: 36px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -135,7 +136,7 @@
 
     .MuiTypography-h3 {
       font-size: 22px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -144,7 +145,7 @@
 
     .MuiTypography-h4 {
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -153,7 +154,7 @@
 
     .MuiTypography-h5 {
       font-size: 14px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -162,28 +163,28 @@
 
     .MuiTypography-h6 {
       font-size: 1.25rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
       line-height: 1.6;
     }
 
     .MuiTypography-subtitle1 {
       font-size: 1rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 400;
       line-height: 1.75;
     }
 
     .MuiTypography-subtitle2 {
       font-size: 0.875rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
       line-height: 1.57;
     }
 
     .MuiTypography-overline {
       font-size: 0.75rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 400;
       line-height: 2.66;
       text-transform: uppercase;
@@ -1023,19 +1024,19 @@
         </div>
         <div class="jss21">
           <h6 class="MuiTypography-root jss12 MuiTypography-h6">Socials</h6>
-          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/twitter.d096bc16.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="imgs/twitter.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Twitter</h4>
           </div>
-          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/medium.48651d56.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="imgs/medium.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Medium</h4>
           </div>
-          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/discord.c4ee516e.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="imgs/discord.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Discord</h4>
           </div>
-          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/telegram.bb486f03.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="imgs/telegram.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Telegram</h4>
           </div>
-          <div class="jss13"><img alt="" src="https://yearn.finance/static/media/github.7611642e.svg" height="24px" class="jss14">
+          <div class="jss13"><img alt="" src="imgs/github.svg" height="24px" class="jss14">
             <h4 class="MuiTypography-root MuiTypography-h4">Github</h4>
           </div>
         </div>
@@ -1189,27 +1190,27 @@
               <div style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: center;">
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">MetaMask</h3><img src="https://yearn.finance/static/media/icn-metamask.a357c69f.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">MetaMask</h3><img src="imgs/icn-metamask.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">TrustWallet</h3><img src="https://yearn.finance/static/media/trustWallet.edcc1ab5.png" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">TrustWallet</h3><img src="imgs/trustWallet.png" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">WalletConnect</h3><img src="https://yearn.finance/static/media/walletConnectIcon.8215855c.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">WalletConnect</h3><img src="imgs/walletConnectIcon.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Coinbase Wallet</h3><img src="https://yearn.finance/static/media/coinbaseWalletIcon.62578f59.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Coinbase Wallet</h3><img src="imgs/coinbaseWalletIcon.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Ledger</h3><img src="https://yearn.finance/static/media/icn-ledger.ae009e65.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Ledger</h3><img src="imgs/icn-ledger.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
@@ -1226,7 +1227,7 @@
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Portis</h3><img src="https://yearn.finance/static/media/portisIcon.b234b2bf.png" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Portis</h3><img src="imgs/portisIcon.png" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
