--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <meta name="theme-color" content="#000000">
   <meta name="viewport" content="initial-scale=1,minimum-scale=1,width=device-width,shrink-to-fit=yes">
   <link rel="manifest" href="./manifest.json">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <title>yearn</title>
   <link href="./static/css/main.60c6551b.chunk.css" rel="stylesheet">
   <style data-jss="" data-meta="MuiCssBaseline">
@@ -48,7 +49,7 @@
       color: #212529;
       margin: 0;
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.43;
       background-color: #fafafa;
