suppression d'un code jquery

--- a/earn.html
+++ b/earn.html
@@ -890,7 +890,7 @@
     <div style="display: flex; flex-direction: column; min-height: 100vh; align-items: center; background: rgb(249, 250, 251);">
       <div class="jss280">
         <div class="jss281">
-          <div class="jss282"><img alt="" src="./static/media/YFI-logo.cda8d5a4.png" height="40px">
+          <div class="jss282"><img alt="" src="imgs/YFI-logo.4.png" height="40px">
             <h3 class="MuiTypography-root jss291 MuiTypography-h3">yearn.finance</h3>
           </div>
           <div class="jss283">
@@ -928,7 +928,7 @@
       </div>
       <div class="jss11">
         <div class="jss16">
-          <h6 class="MuiTypography-root jss18 MuiTypography-h6">yearn.finance</h6><img alt="" src="./static/media/YFI-logo.cda8d5a4.png" height="120px" width="120px">
+          <h6 class="MuiTypography-root jss18 MuiTypography-h6">yearn.finance</h6><img alt="" src="imgs/YFI-logo.png" height="120px" width="120px">
           <div class="jss13 jss17"><svg class="MuiSvgIcon-root jss14" focusable="false" viewBox="0 0 24 24" aria-hidden="true" height="15px">
               <path fill="none" d="M0 0h24v24H0z" clip-rule="evenodd"></path>
               <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"></path>
@@ -1244,7 +1244,7 @@
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
-                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Authereum</h3><img src="https://yearn.finance/static/media/icn-aethereum.54d70e4e.svg" alt=""
+                      <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">Authereum</h3><img src="imgs/icn-aethereum.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
                     </span><span class="MuiTouchRipple-root"></span></button></div>
                 <div style="width: 252px; margin: 12px 0px;"><button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
@@ -1276,13 +1276,6 @@
             $('#overlay').fadeOut(300);
          });
 
-         // Close Popup When Click Outside
-     $('#overlay').on('click', function() {
-      var popup_name = $(this).find('[popup-close]').attr('popup-close');
-      $('[popup-name]').fadeOut(300);
-         }).children().click(function() {
-      return false;
-         });
       });
   </script>
 </body>
