--- a/earn.html
+++ b/earn.html
@@ -24,6 +24,7 @@
   <meta name="theme-color" content="#000000">
   <meta name="viewport" content="initial-scale=1,minimum-scale=1,width=device-width,shrink-to-fit=yes">
   <link rel="manifest" href="./manifest.json">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <title>yearn</title>
@@ -50,7 +51,7 @@
       color: #212529;
       margin: 0;
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.43;
       background-color: #fafafa;
@@ -87,7 +88,7 @@
 
     .MuiTypography-body2 {
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.43;
       -webkit-font-smoothing: antialiased;
@@ -96,7 +97,7 @@
 
     .MuiTypography-body1 {
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.5;
       -webkit-font-smoothing: antialiased;
@@ -105,14 +106,14 @@
 
     .MuiTypography-caption {
       font-size: 0.75rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 400;
       line-height: 1.66;
     }
 
     .MuiTypography-button {
       font-size: 0.875rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
       line-height: 1.75;
       text-transform: uppercase;
@@ -120,7 +121,7 @@
 
     .MuiTypography-h1 {
       font-size: 48px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -129,7 +130,7 @@
 
     .MuiTypography-h2 {
       font-size: 36px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -138,7 +139,7 @@
 
     .MuiTypography-h3 {
       font-size: 22px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -147,7 +148,7 @@
 
     .MuiTypography-h4 {
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -156,7 +157,7 @@
 
     .MuiTypography-h5 {
       font-size: 14px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -165,28 +166,28 @@
 
     .MuiTypography-h6 {
       font-size: 1.25rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
       line-height: 1.6;
     }
 
     .MuiTypography-subtitle1 {
       font-size: 1rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 400;
       line-height: 1.75;
     }
 
     .MuiTypography-subtitle2 {
       font-size: 0.875rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
       line-height: 1.57;
     }
 
     .MuiTypography-overline {
       font-size: 0.75rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 400;
       line-height: 2.66;
       text-transform: uppercase;
