--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="theme-color" content="#000000">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <meta name="viewport" content="initial-scale=1,minimum-scale=1,width=device-width,shrink-to-fit=yes">
   <link rel="manifest" href="./manifest.json">
   <title>yearn</title>
@@ -48,7 +49,7 @@
       color: #212529;
       margin: 0;
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.43;
       background-color: #fafafa;
@@ -85,7 +86,7 @@
 
     .MuiTypography-body2 {
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.43;
       -webkit-font-smoothing: antialiased;
@@ -94,7 +95,7 @@
 
     .MuiTypography-body1 {
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 300;
       line-height: 1.5;
       -webkit-font-smoothing: antialiased;
@@ -103,14 +104,14 @@
 
     .MuiTypography-caption {
       font-size: 0.75rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 400;
       line-height: 1.66;
     }
 
     .MuiTypography-button {
       font-size: 0.875rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
       line-height: 1.75;
       text-transform: uppercase;
@@ -118,7 +119,7 @@
 
     .MuiTypography-h1 {
       font-size: 48px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -127,7 +128,7 @@
 
     .MuiTypography-h2 {
       font-size: 36px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -136,7 +137,7 @@
 
     .MuiTypography-h3 {
       font-size: 22px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -145,7 +146,7 @@
 
     .MuiTypography-h4 {
       font-size: 16px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -154,7 +155,7 @@
 
     .MuiTypography-h5 {
       font-size: 14px;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       line-height: 1.2;
       -webkit-font-smoothing: antialiased;
@@ -163,28 +164,28 @@
 
     .MuiTypography-h6 {
       font-size: 1.25rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
       line-height: 1.6;
     }
 
     .MuiTypography-subtitle1 {
       font-size: 1rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 400;
       line-height: 1.75;
     }
 
     .MuiTypography-subtitle2 {
       font-size: 0.875rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 500;
       line-height: 1.57;
     }
 
     .MuiTypography-overline {
       font-size: 0.75rem;
-      font-family: "Work Sans Thin", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-family: 'Montserrat', sans-serif;
       font-weight: 400;
       line-height: 2.66;
       text-transform: uppercase;
