logo du site reference

--- a/earn.html
+++ b/earn.html
@@ -893,7 +893,7 @@
     <div style="display: flex; flex-direction: column; min-height: 100vh; align-items: center; background: rgb(249, 250, 251);">
       <div class="jss280">
         <div class="jss281">
-          <div class="jss282"><img alt="" src="imgs/YFI-logo.cda8d5a4.png" height="40px">
+          <div class="jss282"><img alt="" src="imgs/YFI-logo.4.png" height="40px">
             <h3 class="MuiTypography-root jss291 MuiTypography-h3">yearn.finance</h3>
           </div>
           <div class="jss283">
@@ -931,7 +931,7 @@
       </div>
       <div class="jss11">
         <div class="jss16">
-          <h6 class="MuiTypography-root jss18 MuiTypography-h6">yearn.finance</h6><img alt="" src="imgs/YFI-logo.cda8d5a4.png" height="120px" width="120px">
+          <h6 class="MuiTypography-root jss18 MuiTypography-h6">yearn.finance</h6><img alt="" src="imgs/YFI-logo.png" height="120px" width="120px">
           <div class="jss13 jss17"><svg class="MuiSvgIcon-root jss14" focusable="false" viewBox="0 0 24 24" aria-hidden="true" height="15px">
               <path fill="none" d="M0 0h24v24H0z" clip-rule="evenodd"></path>
               <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"></path>
